--- a/Portfólio/Index.html
+++ b/Portfólio/Index.html
@@ -154,6 +154,7 @@
                     <li>Python</li>
                     <li>Winforms</li>
                     <li>WPF</li>
+                    <li>React JS</li>
                 </ul>
             </div>
         </div>
